# snowML

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: GetData_AZ_2.ipynb
